Update the content of tpcds_throughput_test notebook

--- a/dev/integrations/oap/emr/benchmark/tpcds_throughput_test.ipynb
+++ b/dev/integrations/oap/emr/benchmark/tpcds_throughput_test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c021214",
+   "id": "0ed69632",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c49fa0b",
+   "id": "c51bda39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "import java.util.concurrent.Executors\n",
     "import java.util.concurrent.ExecutorService\n",
     "import com.databricks.spark.sql.perf.tpcds.TPCDS\n",
+    "import com.databricks.spark.sql.perf.Benchmark.ExperimentStatus\n",
     "\n",
     "val tpcds = new TPCDS (sqlContext = spark.sqlContext)\n",
     "val stream_num = 2\n",
@@ -31,14 +32,9 @@
     "val iterations = 1 // how many times to run the whole set of queries.\n",
     "val format = \"parquet\"\n",
     "val useDecimal = true\n",
-    "//val query_filter = Seq() // Seq() == all queries\n",
-    "var query_filter = Seq[String]()\n",
-    "for (i <- 1 to 98) {\n",
-    "    query_filter = query_filter:+(s\"q${i}-v2.4\")\n",
-    "}\n",
-    "println(query_filter)\n",
+    "val query_filter = Seq() // Seq() == all queries\n",
     "//val query_filter = Seq(\"q1-v2.4\", \"q2-v2.4\") // run subset of queries\n",
-    "val randomizeQueries = false // run queries in a random order. Recommended for parallel runs.\n",
+    "val randomizeQueries = true // run queries in a random order. Recommended for parallel runs.\n",
     "val current_time = new SimpleDateFormat(\"yyyy-MM-dd-HH:mm:ss\").format(new Date)\n",
     "val resultLocation = s\"s3://aws-emr-resources-348941870272-us-east-2/results/tpcds_${format}/${scaleFactor}/${current_time}\"\n",
     "val databaseName = s\"tpcds_${format}_scale_${scaleFactor}_db\"\n",
@@ -52,29 +48,28 @@
     "        case Seq() => tpcds.tpcds2_4Queries\n",
     "        case _ => tpcds.tpcds2_4Queries.filter(q => query_filter.contains(q.name))\n",
     "    }\n",
-    "    println(filtered_queries)\n",
     "    if (randomizeQueries) scala.util.Random.shuffle(filtered_queries) else filtered_queries\n",
     "}\n",
     "\n",
-    "class ThreadStream(threadName:String) extends Thread{\n",
+    "class ThreadStream(experiment:ExperimentStatus) extends Thread{\n",
     "    override def run(){\n",
-    "        println(threadName) \n",
-    "        val experiment = tpcds.runExperiment(\n",
-    "            queries, \n",
-    "            iterations = iterations,\n",
-    "            resultLocation = resultLocation,\n",
-    "            tags = Map(\"runtype\" -> \"benchmark\", \"database\" -> databaseName, \"scale_factor\" -> scaleFactor)\n",
-    "        )\n",
     "        println(experiment.toString)\n",
     "        experiment.waitForFinish(timeout*60*60)\n",
     "    }\n",
     "}\n",
     "\n",
     "val threadPool:ExecutorService=Executors.newFixedThreadPool(stream_num)\n",
+    "val experiments:Array[ExperimentStatus] = new Array[ExperimentStatus](stream_num)\n",
     "\n",
     "try {\n",
-    "    for(i <- 1 to stream_num){\n",
-    "        threadPool.execute(new ThreadStream(\"thread\"+i))\n",
+    "    for(i <- 0 to (stream_num - 1)){\n",
+    "        experiments(i) = tpcds.runExperiment(\n",
+    "            queries, \n",
+    "            iterations = iterations,\n",
+    "            resultLocation = resultLocation,\n",
+    "            tags = Map(\"runtype\" -> \"benchmark\", \"database\" -> databaseName, \"scale_factor\" -> scaleFactor)\n",
+    "        )\n",
+    "        threadPool.execute(new ThreadStream(experiments(i)))\n",
     "    }\n",
     "}finally{\n",
     "    threadPool.shutdown()\n",
@@ -84,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0579d1b2",
+   "id": "1c84da8e",
    "metadata": {},
    "outputs": [],
    "source": []
