--- a/dev/integrations/oap/emr/notebooks/tpcds_throughput_test.ipynb
+++ b/dev/integrations/oap/emr/notebooks/tpcds_throughput_test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ed69632",
+   "id": "b67af3aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c51bda39",
+   "id": "09c0c9be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%configure -f\n",
+    "{\"conf\":{\"spark.driver.extraClassPath\":\"/usr/lib/hadoop-lzo/lib/*:/usr/lib/hadoop/hadoop-aws.jar:/usr/share/aws/aws-java-sdk/*:/usr/share/aws/emr/goodies/lib/emr-spark-goodies.jar:/usr/share/aws/emr/security/conf:/usr/share/aws/emr/security/lib/*:/usr/share/aws/hmclient/lib/aws-glue-datacatalog-spark-client.jar:/usr/share/java/Hive-JSON-Serde/hive-openx-serde.jar:/usr/share/aws/sagemaker-spark-sdk/lib/sagemaker-spark-sdk.jar:/usr/share/aws/emr/s3select/lib/emr-s3-select-spark-connector.jar:/docker/usr/lib/hadoop-lzo/lib/*:/docker/usr/lib/hadoop/hadoop-aws.jar:/docker/usr/share/aws/aws-java-sdk/*:/docker/usr/share/aws/emr/goodies/lib/emr-spark-goodies.jar:/docker/usr/share/aws/emr/security/conf:/docker/usr/share/aws/emr/security/lib/*:/docker/usr/share/aws/hmclient/lib/aws-glue-datacatalog-spark-client.jar:/docker/usr/share/java/Hive-JSON-Serde/hive-openx-serde.jar:/docker/usr/share/aws/sagemaker-spark-sdk/lib/sagemaker-spark-sdk.jar:/docker/usr/share/aws/emr/s3select/lib/emr-s3-select-spark-connector.jar,file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar:file:///opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-snapshot-jar-with-dependencies.jar:file:///opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-snapshot-jar-with-dependencies.jar\", \n",
+    "        \"spark.executor.extraClassPath\":\"/usr/lib/hadoop-lzo/lib/*:/usr/lib/hadoop/hadoop-aws.jar:/usr/share/aws/aws-java-sdk/*:/usr/share/aws/emr/goodies/lib/emr-spark-goodies.jar:/usr/share/aws/emr/security/conf:/usr/share/aws/emr/security/lib/*:/usr/share/aws/hmclient/lib/aws-glue-datacatalog-spark-client.jar:/usr/share/java/Hive-JSON-Serde/hive-openx-serde.jar:/usr/share/aws/sagemaker-spark-sdk/lib/sagemaker-spark-sdk.jar:/usr/share/aws/emr/s3select/lib/emr-s3-select-spark-connector.jar:/docker/usr/lib/hadoop-lzo/lib/*:/docker/usr/lib/hadoop/hadoop-aws.jar:/docker/usr/share/aws/aws-java-sdk/*:/docker/usr/share/aws/emr/goodies/lib/emr-spark-goodies.jar:/docker/usr/share/aws/emr/security/conf:/docker/usr/share/aws/emr/security/lib/*:/docker/usr/share/aws/hmclient/lib/aws-glue-datacatalog-spark-client.jar:/docker/usr/share/java/Hive-JSON-Serde/hive-openx-serde.jar:/docker/usr/share/aws/sagemaker-spark-sdk/lib/sagemaker-spark-sdk.jar:/docker/usr/share/aws/emr/s3select/lib/emr-s3-select-spark-connector.jar,file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar:file:///opt/benchmark-tools/oap/oap_jars/spark-arrow-datasource-standard-1.2.0-snapshot-jar-with-dependencies.jar:file:///opt/benchmark-tools/oap/oap_jars/spark-columnar-core-1.2.0-snapshot-jar-with-dependencies.jar\",\n",
+    "        \"spark.driver.extraLibraryPath\":\"/usr/lib/hadoop/lib/native:/usr/lib/hadoop-lzo/lib/native:/docker/usr/lib/hadoop/lib/native:/docker/usr/lib/hadoop-lzo/lib/native:/opt/benchmark-tools/oap/lib\",\n",
+    "        \"spark.executor.extraLibraryPath\":\"/usr/lib/hadoop/lib/native:/usr/lib/hadoop-lzo/lib/native:/docker/usr/lib/hadoop/lib/native:/docker/usr/lib/hadoop-lzo/lib/native:/opt/benchmark-tools/oap/lib\",\n",
+    "        \"spark.executor.defaultJavaOptions\":\"-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:OnOutOfMemoryError='kill -9 %p' -XX:MaxDirectMemorySize=40G\",\n",
+    "        \"spark.executorEnv.CC\":\"/opt/benchmark-tools/oap/bin/gcc\",\n",
+    "        \"spark.executorEnv.CXX\":\"/opt/benchmark-tools/oap/bin/g++\",\n",
+    "        \"spark.executorEnv.CPLUS_INCLUDE_PATH\":\"/opt/benchmark-tools/oap/include\",\n",
+    "        \"spark.executorEnv.LD_LIBRARY_PATH\":\"/opt/benchmark-tools/oap/lib\",\n",
+    "        \"spark.sql.extensions\":\"com.intel.oap.ColumnarPlugin\",\n",
+    "        \"spark.shuffle.manager\":\"org.apache.spark.shuffle.sort.ColumnarShuffleManager\",\n",
+    "        \"spark.sql.join.preferSortMergeJoin\":\"false\",\n",
+    "        \"spark.sql.inMemoryColumnarStorage.batchSize\":\"20480\",\n",
+    "        \"spark.sql.parquet.columnarReaderBatchSize\":\"20480\",\n",
+    "        \"spark.sql.execution.arrow.maxRecordsPerBatch\":\"20480\",\n",
+    "        \"spark.executor.memoryOverhead\":\"512m\",\n",
+    "        \"spark.sql.autoBroadcastJoinThreshold\":\"10485760\",\n",
+    "        \"spark.driver.maxResultSize\":\"1g\",\n",
+    "        \"spark.memory.offHeap.enabled\":\"false\",\n",
+    "        \"spark.memory.offHeap.size\":\"10g\",\n",
+    "        \"spark.sql.adaptive.enabled\":\"false\",\n",
+    "        \"spark.sql.sources.useV1SourceList\":\"avro\",\n",
+    "        \"spark.driver.userClassPathFirst\":\"true\",\n",
+    "        \"spark.executor.userClassPathFirst\":\"true\"}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d42ca8aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,20 +60,59 @@
     "import com.databricks.spark.sql.perf.tpcds.TPCDS\n",
     "import com.databricks.spark.sql.perf.Benchmark.ExperimentStatus\n",
     "\n",
-    "val tpcds = new TPCDS (sqlContext = spark.sqlContext)\n",
-    "val stream_num = 2\n",
-    "val scaleFactor = \"1\"\n",
-    "val iterations = 1 // how many times to run the whole set of queries.\n",
-    "val format = \"parquet\"\n",
-    "val useDecimal = true\n",
-    "val query_filter = Seq() // Seq() == all queries\n",
-    "//val query_filter = Seq(\"q1-v2.4\", \"q2-v2.4\") // run subset of queries\n",
-    "val randomizeQueries = true // run queries in a random order. Recommended for parallel runs.\n",
-    "val current_time = new SimpleDateFormat(\"yyyy-MM-dd-HH:mm:ss\").format(new Date)\n",
-    "val resultLocation = s\"s3://aws-emr-resources-348941870272-us-east-2/results/tpcds_${format}/${scaleFactor}/${current_time}\"\n",
-    "val databaseName = s\"tpcds_${format}_scale_${scaleFactor}_db\"\n",
-    "val timeout = 60 // timeout in hours\n",
     "\n",
+    "val stream_num = 2              // how many streams you want to start \n",
+    "val scaleFactor = \"1\"           // data scale 1GB\n",
+    "val iterations = 1              // how many times to run the whole set of queries.\n",
+    "val format = \"parquet\"          // support parquer or orc\n",
+    "val storage = \"s3\"              // support hdfs or s3\n",
+    "var bucket_name = \"aws-emr-resources-348941870272-us-east-2\"   // when storage is \"s3\", this value will be use.\n",
+    "val use_arrow = true            // when you want to use gazella_plugin to run TPC-DS, you need to set it true.\n",
+    "val partitionTables = true      // create partition tables\n",
+    "val query_filter = Seq()        // Seq() == all queries\n",
+    "//val query_filter = Seq(\"q1-v2.4\", \"q2-v2.4\") // run subset of queries\n",
+    "val randomizeQueries = true     // run queries in a random order. Recommended for parallel runs.\n",
+    " \n",
+    "if (storage == \"hdfs\"){\n",
+    "    bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory               \n",
+    "}\n",
+    "\n",
+    "val current_time = new SimpleDateFormat(\"yyyy-MM-dd-HH:mm:ss\").format(new Date)\n",
+    "var resultLocation = s\"${storage}://${bucket_name}/results/tpcds_${format}/${scaleFactor}/${current_time}\"\n",
+    "var databaseName = s\"tpcds_${format}_scale_${scaleFactor}_db\"\n",
+    "\n",
+    "if (use_arrow){\n",
+    "    val data_path = s\"${storage}://${bucket_name}/datagen/tpcds_${format}/${scaleFactor}\"\n",
+    "    resultLocation = s\"${storage}://${bucket_name}/results/tpcds_arrow/${scaleFactor}/\"\n",
+    "    databaseName = s\"tpcds_arrow_scale_${scaleFactor}_db\"\n",
+    "    val tables = Seq(\"call_center\", \"catalog_page\", \"catalog_returns\", \"catalog_sales\", \"customer\", \"customer_address\", \"customer_demographics\", \"date_dim\", \"household_demographics\", \"income_band\", \"inventory\", \"item\", \"promotion\", \"reason\", \"ship_mode\", \"store\", \"store_returns\", \"store_sales\", \"time_dim\", \"warehouse\", \"web_page\", \"web_returns\", \"web_sales\", \"web_site\")\n",
+    "    sql(s\"DROP database $databaseName CASCADE\")\n",
+    "    if (spark.catalog.databaseExists(s\"$databaseName\")) {\n",
+    "        println(s\"$databaseName has exists!\")\n",
+    "    }else{\n",
+    "        spark.sql(s\"create database if not exists $databaseName\").show\n",
+    "        spark.sql(s\"use $databaseName\").show\n",
+    "        for (table <- tables) {\n",
+    "            if (spark.catalog.tableExists(s\"$table\")){\n",
+    "                println(s\"$table has exists!\")\n",
+    "            }else{\n",
+    "                spark.catalog.createTable(s\"$table\", s\"$data_path/$table\", \"arrow\")\n",
+    "            }\n",
+    "        }\n",
+    "        if (partitionTables) {\n",
+    "            for (table <- tables) {\n",
+    "                try{\n",
+    "                    spark.sql(s\"ALTER TABLE $table RECOVER PARTITIONS\").show\n",
+    "                }catch{\n",
+    "                        case e: Exception => println(e)\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "val timeout = 60 // timeout in hours\n",
+    "val tpcds = new TPCDS (sqlContext = spark.sqlContext)\n",
     "spark.conf.set(\"spark.sql.broadcastTimeout\", \"10000\") // good idea for Q14, Q88.\n",
     "sql(s\"use $databaseName\")\n",
     "\n",
@@ -75,14 +148,6 @@
     "    threadPool.shutdown()\n",
     "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c84da8e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
