[OAP-TOOL-96]Add Google Gloud Storage bucktets support in Dataproc notebooks

--- a/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
@@ -54,6 +54,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dd0ea87e-ff49-44d3-9c7a-f97d8a5aecad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hadoop fs -mkdir /user/livy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d8cf356f-237b-4ba9-b2e3-ad2872d905f7",
    "metadata": {},
    "outputs": [],
@@ -68,13 +78,17 @@
     "val stream_num = 2              // how many streams you want to start \n",
     "val scaleFactor = \"1\"           // data scale 1GB\n",
     "val iterations = 1              // how many times to run the whole set of queries.\n",
-    "val format = \"parquet\"          // support parquer or orc\n",
-    "val storage = \"hdfs\"              // support hdfs \n",
-    "val bucket_name = \"/user/livy\"  \n",
+    "val format = \"parquet\"          // support parquet or orc\n",
+    "val storage = \"gs\"              // support Google Cloud Storage buckets -- \"gs\", or HDFS -- \"hdfs\"\n",
+    "var bucket_name = \"oap-dev\"     // Please change to your bucket name \n",
     "val partitionTables = true      // create partition tables\n",
     "val query_filter = Seq()        // Seq() == all queries\n",
     "//val query_filter = Seq(\"q1-v2.4\", \"q2-v2.4\") // run subset of queries\n",
     "val randomizeQueries = false    // run queries in a random order. Recommended for parallel runs.\n",
+    "\n",
+    "if (storage == \"hdfs\"){\n",
+    "    bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory       \n",
+    "}\n",
     "\n",
     "// detailed results will be written as JSON to this location.\n",
     "var resultLocation = s\"${storage}://${bucket_name}/results/tpcds_${format}/${scaleFactor}/\"\n",
