--- a/integrations/oap/dataproc/notebooks/tpcds_throughput_test_with_gazelle_plugin_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_throughput_test_with_gazelle_plugin_Dataproc.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "db4fe078-84a8-456d-84e5-abbec66307d7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "!echo -e \"spark.driver.extraLibraryPath=file:///opt/benchmark-tools/oap/lib\">> /etc/spark/conf/spark-defaults.conf\n",
@@ -54,6 +56,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f5539579-b1df-44ab-9e5a-b4dca2dcbde0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!hadoop fs -mkdir /user/livy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4d562cf4",
    "metadata": {},
    "outputs": [],
@@ -68,13 +80,17 @@
     "val stream_num = 2              // how many streams you want to start \n",
     "val scaleFactor = \"1\"           // data scale 1GB\n",
     "val iterations = 1              // how many times to run the whole set of queries.\n",
-    "val format = \"parquet\"          // support parquer or orc\n",
-    "val storage = \"hdfs\"            \n",
-    "var bucket_name = \"/user/livy\"\n",
+    "val format = \"parquet\"          // support parquet or orc\n",
+    "val storage = \"gs\"              // support Google Cloud Storage buckets -- \"gs\", or HDFS -- \"hdfs\"\n",
+    "var bucket_name = \"oap-dev\"     // Please change to your bucket name \n",
     "val partitionTables = true      // create partition tables\n",
     "val query_filter = Seq()        // Seq() == all queries\n",
     "//val query_filter = Seq(\"q1-v2.4\", \"q2-v2.4\") // run subset of queries\n",
     "val randomizeQueries = true     // run queries in a random order. Recommended for parallel runs.\n",
+    "\n",
+    "if (storage == \"hdfs\"){\n",
+    "    bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory       \n",
+    "}\n",
     "\n",
     "val current_time = new SimpleDateFormat(\"yyyy-MM-dd-HH:mm:ss\").format(new Date)\n",
     "var resultLocation = s\"${storage}://${bucket_name}/results/tpcds_${format}/${scaleFactor}/${current_time}\"\n",
