--- a/integrations/oap/dataproc/notebooks/tpcds_throughput_test_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_throughput_test_Dataproc.ipynb
@@ -38,13 +38,17 @@
     "val stream_num = 2              // how many streams you want to start \n",
     "val scaleFactor = \"1\"           // data scale 1GB\n",
     "val iterations = 1              // how many times to run the whole set of queries.\n",
-    "val format = \"parquet\"          // support parquer or orc\n",
-    "val storage = \"hdfs\"         \n",
-    "var bucket_name = \"/user/livy\"\n",
+    "val format = \"parquet\"          // support parquet or orc\n",
+    "val storage = \"gs\"              // support Google Cloud Storage buckets -- \"gs\", or HDFS -- \"hdfs\"\n",
+    "var bucket_name = \"oap-dev\"     // Please change to your bucket name \n",
     "val partitionTables = true      // create partition tables\n",
     "val query_filter = Seq()        // Seq() == all queries\n",
     "//val query_filter = Seq(\"q1-v2.4\", \"q2-v2.4\") // run subset of queries\n",
     "val randomizeQueries = true     // run queries in a random order. Recommended for parallel runs.\n",
+    "\n",
+    "if (storage == \"hdfs\"){\n",
+    "    bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory       \n",
+    "}\n",
     "\n",
     "val current_time = new SimpleDateFormat(\"yyyy-MM-dd-HH:mm:ss\").format(new Date)\n",
     "var resultLocation = s\"${storage}://${bucket_name}/results/tpcds_${format}/${scaleFactor}/${current_time}\"\n",
