[OAP-TOOL-96]Modify notebooks to use HDFS as storage

--- a/integrations/oap/dataproc/notebooks/tpcds_datagen_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_datagen_Dataproc.ipynb
@@ -21,22 +21,9 @@
     "val scale = \"1\"                   // data scale 1GB\n",
     "val format = \"parquet\"            // support parquet or orc\n",
     "val partitionTables = true        // create partition table\n",
-    "val storage = \"gs\"                // support Google Cloud Storage buckets -- \"gs\", or HDFS -- \"hdfs\"\n",
-    "var bucket_name = \"oap-dev\"       // Please change to your bucket name \n",
+    "val storage = \"hdfs\"              // support HDFS\n",
+    "val bucket_name = \"/user/livy\"    // scala notebook only has the write permission of \"hdfs:///user/livy\" directory    \n",
     "val useDoubleForDecimal = false   // use double format instead of decimal format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3bbec3c7-5929-4b8d-8da4-943d9410dfc5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if (storage == \"hdfs\"){\n",
-    "    bucket_name = \"/user/livy\"    // scala notebook only has the write permission of \"hdfs:///user/livy\" directory   \n",
-    "    // Create /user/livy on HDFS\n",
-    "}"
    ]
   },
   {
