--- a/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
@@ -79,16 +79,12 @@
     "val scaleFactor = \"1\"           // data scale 1GB\n",
     "val iterations = 1              // how many times to run the whole set of queries.\n",
     "val format = \"parquet\"          // support parquet or orc\n",
-    "val storage = \"gs\"              // support Google Cloud Storage buckets -- \"gs\", or HDFS -- \"hdfs\"\n",
-    "var bucket_name = \"oap-dev\"     // Please change to your bucket name \n",
+    "val storage = \"hdfs\"            // support HDFS\n",
+    "val bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory    \n",
     "val partitionTables = true      // create partition tables\n",
     "val query_filter = Seq()        // Seq() == all queries\n",
     "//val query_filter = Seq(\"q1-v2.4\", \"q2-v2.4\") // run subset of queries\n",
     "val randomizeQueries = false    // run queries in a random order. Recommended for parallel runs.\n",
-    "\n",
-    "if (storage == \"hdfs\"){\n",
-    "    bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory       \n",
-    "}\n",
     "\n",
     "// detailed results will be written as JSON to this location.\n",
     "var resultLocation = s\"${storage}://${bucket_name}/results/tpcds_${format}/${scaleFactor}/\"\n",
@@ -108,7 +104,7 @@
     "    resultLocation = s\"${storage}://${bucket_name}/results/tpcds_arrow/${scaleFactor}/\"\n",
     "    databaseName = s\"tpcds_arrow_scale_${scaleFactor}_db\"\n",
     "    val tables = Seq(\"call_center\", \"catalog_page\", \"catalog_returns\", \"catalog_sales\", \"customer\", \"customer_address\", \"customer_demographics\", \"date_dim\", \"household_demographics\", \"income_band\", \"inventory\", \"item\", \"promotion\", \"reason\", \"ship_mode\", \"store\", \"store_returns\", \"store_sales\", \"time_dim\", \"warehouse\", \"web_page\", \"web_returns\", \"web_sales\", \"web_site\")\n",
-    "    sql(s\"DROP database $databaseName CASCADE\")\n",
+    "    sql(s\"DROP database if exsits $databaseName CASCADE\")\n",
     "    if (spark.catalog.databaseExists(s\"$databaseName\")) {\n",
     "        println(s\"$databaseName has exists!\")\n",
     "    }else{\n",
