[OAP-TOOL-96]Update Dataproc notebooks and scripts

--- a/integrations/oap/dataproc/notebooks/tpcds_datagen_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_datagen_Dataproc.ipynb
@@ -8,28 +8,14 @@
    "outputs": [],
    "source": [
     "!echo \"spark.driver.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo \"spark.executor.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf"
+    "!echo \"spark.executor.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo \"spark.sql.warehouse.dir=hdfs:///user/livy\">> /etc/spark/conf/spark-defaults.conf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8b3d24d-52c1-4ec5-a4da-07a8f2ca1e29",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val scale = \"1\"                   // data scale 1GB\n",
-    "val format = \"parquet\"            // support parquet or orc\n",
-    "val partitionTables = true        // create partition table\n",
-    "val storage = \"hdfs\"              // support HDFS\n",
-    "val bucket_name = \"/user/livy\"    // scala notebook only has the write permission of \"hdfs:///user/livy\" directory    \n",
-    "val useDoubleForDecimal = false   // use double format instead of decimal format"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be1ddbe6-de76-491c-9f61-05832c780a04",
+   "id": "44c87720-f449-4a04-a69f-d28050191da3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +25,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3cb568b-1588-486b-a6e6-024fd2f4b49f",
+   "id": "5fe9fd82-a00b-4100-af74-6e5edf227a9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val scale = \"1\"                   // data scale 1GB\n",
+    "val format = \"parquet\"            // support parquet or orc\n",
+    "val partitionTables = true        // create partition table\n",
+    "val storage = \"hdfs\"              // choose HDFS\n",
+    "val bucket_name = \"/user/livy\"    // scala notebook only has the write permission of \"hdfs:///user/livy\" directory    \n",
+    "val useDoubleForDecimal = false   // use double format instead of decimal format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "753945d6-b2fe-46e7-94bc-113d48f02be2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d112e96-73e0-487b-8044-6ccc1f7f0ecd",
+   "id": "1d6fcf5a-d372-4b80-b237-20f7d6d5baaa",
    "metadata": {},
    "outputs": [],
    "source": [
