--- a/integrations/oap/dataproc/notebooks/tpcds_power_test_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_power_test_Dataproc.ipynb
@@ -8,13 +8,14 @@
    "outputs": [],
    "source": [
     "!echo \"spark.driver.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo \"spark.executor.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf"
+    "!echo \"spark.executor.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo \"spark.sql.warehouse.dir=hdfs:///user/livy\">> /etc/spark/conf/spark-defaults.conf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "517abe15-b69d-4794-b29a-dddbeb056204",
+   "id": "f7ccb0c8-a4b6-4cad-a09e-08ba61125c65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd37bbb1-8f7a-40ca-936c-be0a55a11919",
+   "id": "13ec09dd-fb22-4eb5-8220-1d4ca00af768",
    "metadata": {},
    "outputs": [],
    "source": [
     "val scaleFactor = \"1\"           // data scale 1GB\n",
     "val iterations = 1              // how many times to run the whole set of queries.\n",
     "val format = \"parquet\"          // support parquet or orc\n",
-    "val storage = \"hdfs\"            // support HDFS\n",
+    "val storage = \"hdfs\"            // choose HDFS\n",
     "val bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory    \n",
     "val partitionTables = true      // create partition tables\n",
     "val query_filter = Seq()        // Seq() == all queries\n",
@@ -48,7 +49,6 @@
     "    resultLocation = s\"${storage}://${bucket_name}/results/tpcds_arrow/${scaleFactor}/\"\n",
     "    databaseName = s\"tpcds_arrow_scale_${scaleFactor}_db\"\n",
     "    val tables = Seq(\"call_center\", \"catalog_page\", \"catalog_returns\", \"catalog_sales\", \"customer\", \"customer_address\", \"customer_demographics\", \"date_dim\", \"household_demographics\", \"income_band\", \"inventory\", \"item\", \"promotion\", \"reason\", \"ship_mode\", \"store\", \"store_returns\", \"store_sales\", \"time_dim\", \"warehouse\", \"web_page\", \"web_returns\", \"web_sales\", \"web_site\")\n",
-    "    sql(s\"DROP database if exsits $databaseName CASCADE\")\n",
     "    if (spark.catalog.databaseExists(s\"$databaseName\")) {\n",
     "        println(s\"$databaseName has exists!\")\n",
     "    }else{\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c3ad5d1-ebc3-4eb7-9b36-0e99885a88cd",
+   "id": "143c468d-21f2-466b-8bfe-cd3fe997da49",
    "metadata": {},
    "outputs": [],
    "source": [
