--- a/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_power_test_with_gazelle_plugin_Dataproc.ipynb
@@ -53,8 +53,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "6c35826d-05f3-4ed1-980a-7d35f0abf558",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!export CC=/opt/benchmark-tools/oap/bin/gcc\n",
+    "!export LIBARROW_DIR=/opt/benchmark-tools/oap\n",
+    "!export LD_LIBRARY_PATH=/opt/benchmark-tools/oap/lib/:$LD_LIBRARY_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dd0ea87e-ff49-44d3-9c7a-f97d8a5aecad",
+   "id": "52e99085-44fa-4e63-94c7-0994fb030de1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,21 +76,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8cf356f-237b-4ba9-b2e3-ad2872d905f7",
+   "id": "d8e758e3-93cc-488b-8ae9-7804a2723610",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import java.text.SimpleDateFormat;\n",
-    "import java.util.Date\n",
-    "import java.util.concurrent.Executors\n",
-    "import java.util.concurrent.ExecutorService\n",
-    "import com.databricks.spark.sql.perf.tpcds.TPCDS\n",
-    "import com.databricks.spark.sql.perf.Benchmark.ExperimentStatus\n",
-    "\n",
-    "val stream_num = 2              // how many streams you want to start \n",
     "val scaleFactor = \"1\"           // data scale 1GB\n",
     "val iterations = 1              // how many times to run the whole set of queries.\n",
-    "val format = \"parquet\"          // support parquet or orc\n",
+    "val format = \"parquet\"          // support parquer or orc\n",
     "val storage = \"hdfs\"            // support HDFS\n",
     "val bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory    \n",
     "val partitionTables = true      // create partition tables\n",
@@ -89,22 +93,13 @@
     "// detailed results will be written as JSON to this location.\n",
     "var resultLocation = s\"${storage}://${bucket_name}/results/tpcds_${format}/${scaleFactor}/\"\n",
     "var databaseName = s\"tpcds_${format}_scale_${scaleFactor}_db\"\n",
-    "val use_arrow = true            // when you want to use gazella_plugin to run TPC-DS, you need to set it true."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af170703-1032-4458-8c32-f493486138c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "val use_arrow = true            // when you want to use gazella_plugin to run TPC-DS, you need to set it true.\n",
+    "\n",
     "if (use_arrow){\n",
-    "    val data_path = s\"${storage}://${bucket_name}/datagen/tpcds_${format}/${scaleFactor}\"\n",
+    "    val data_path= s\"${storage}://${bucket_name}/datagen/tpcds_${format}/${scaleFactor}\"\n",
     "    resultLocation = s\"${storage}://${bucket_name}/results/tpcds_arrow/${scaleFactor}/\"\n",
     "    databaseName = s\"tpcds_arrow_scale_${scaleFactor}_db\"\n",
     "    val tables = Seq(\"call_center\", \"catalog_page\", \"catalog_returns\", \"catalog_sales\", \"customer\", \"customer_address\", \"customer_demographics\", \"date_dim\", \"household_demographics\", \"income_band\", \"inventory\", \"item\", \"promotion\", \"reason\", \"ship_mode\", \"store\", \"store_returns\", \"store_sales\", \"time_dim\", \"warehouse\", \"web_page\", \"web_returns\", \"web_sales\", \"web_site\")\n",
-    "    sql(s\"DROP database if exsits $databaseName CASCADE\")\n",
     "    if (spark.catalog.databaseExists(s\"$databaseName\")) {\n",
     "        println(s\"$databaseName has exists!\")\n",
     "    }else{\n",
@@ -127,52 +122,36 @@
     "            }\n",
     "        }\n",
     "    }\n",
-    "}\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09f414c1-46aa-4d93-ad85-a2f2abba0372",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "}\n",
+    "\n",
     "val timeout = 60 // timeout in hours\n",
-    "val tpcds = new TPCDS (sqlContext = spark.sqlContext)\n",
+    "\n",
+    "// COMMAND ----------\n",
+    "\n",
+    "// Spark configuration\n",
     "spark.conf.set(\"spark.sql.broadcastTimeout\", \"10000\") // good idea for Q14, Q88.\n",
+    "\n",
+    "// ... + any other configuration tuning\n",
+    "\n",
+    "// COMMAND ----------\n",
     "sql(s\"use $databaseName\")\n",
-    "\n",
+    "import com.databricks.spark.sql.perf.tpcds.TPCDS\n",
+    "val tpcds = new TPCDS (sqlContext = spark.sqlContext)\n",
     "def queries = {\n",
-    "    val filtered_queries = query_filter match {\n",
-    "        case Seq() => tpcds.tpcds2_4Queries\n",
-    "        case _ => tpcds.tpcds2_4Queries.filter(q => query_filter.contains(q.name))\n",
-    "    }\n",
-    "    if (randomizeQueries) scala.util.Random.shuffle(filtered_queries) else filtered_queries\n",
+    "  val filtered_queries = query_filter match {\n",
+    "    case Seq() => tpcds.tpcds2_4Queries\n",
+    "    case _ => tpcds.tpcds2_4Queries.filter(q => query_filter.contains(q.name))\n",
+    "  }\n",
+    "  if (randomizeQueries) scala.util.Random.shuffle(filtered_queries) else filtered_queries\n",
     "}\n",
+    "val experiment = tpcds.runExperiment(\n",
+    "  queries, \n",
+    "  iterations = iterations,\n",
+    "  resultLocation = resultLocation,\n",
+    "  tags = Map(\"runtype\" -> \"benchmark\", \"database\" -> databaseName, \"scale_factor\" -> scaleFactor))\n",
     "\n",
-    "class ThreadStream(experiment:ExperimentStatus) extends Thread{\n",
-    "    override def run(){\n",
-    "        println(experiment.toString)\n",
-    "        experiment.waitForFinish(timeout*60*60)\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "val threadPool:ExecutorService=Executors.newFixedThreadPool(stream_num)\n",
-    "val experiments:Array[ExperimentStatus] = new Array[ExperimentStatus](stream_num)\n",
-    "\n",
-    "try {\n",
-    "    for(i <- 0 to (stream_num - 1)){\n",
-    "        experiments(i) = tpcds.runExperiment(\n",
-    "            queries, \n",
-    "            iterations = iterations,\n",
-    "            resultLocation = resultLocation,\n",
-    "            tags = Map(\"runtype\" -> \"benchmark\", \"database\" -> databaseName, \"scale_factor\" -> scaleFactor)\n",
-    "        )\n",
-    "        threadPool.execute(new ThreadStream(experiments(i)))\n",
-    "    }\n",
-    "}finally{\n",
-    "    threadPool.shutdown()\n",
-    "}"
+    "println(experiment.toString)\n",
+    "experiment.waitForFinish(timeout*60*60)"
    ]
   }
  ],
