--- a/integrations/oap/dataproc/notebooks/tpcds_throughput_test_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_throughput_test_Dataproc.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "!echo \"spark.driver.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf\n",
-    "!echo \"spark.executor.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf"
+    "!echo \"spark.executor.extraClassPath=file:///opt/benchmark-tools/spark-sql-perf/target/scala-2.12/spark-sql-perf_2.12-0.5.1-SNAPSHOT.jar\" >> /etc/spark/conf/spark-defaults.conf\n",
+    "!echo \"spark.sql.warehouse.dir=hdfs:///user/livy\">> /etc/spark/conf/spark-defaults.conf"
    ]
   },
   {
@@ -56,7 +57,6 @@
     "    resultLocation = s\"${storage}://${bucket_name}/results/tpcds_arrow/${scaleFactor}/\"\n",
     "    databaseName = s\"tpcds_arrow_scale_${scaleFactor}_db\"\n",
     "    val tables = Seq(\"call_center\", \"catalog_page\", \"catalog_returns\", \"catalog_sales\", \"customer\", \"customer_address\", \"customer_demographics\", \"date_dim\", \"household_demographics\", \"income_band\", \"inventory\", \"item\", \"promotion\", \"reason\", \"ship_mode\", \"store\", \"store_returns\", \"store_sales\", \"time_dim\", \"warehouse\", \"web_page\", \"web_returns\", \"web_sales\", \"web_site\")\n",
-    "    sql(s\"DROP database if exsits $databaseName CASCADE\")\n",
     "    if (spark.catalog.databaseExists(s\"$databaseName\")) {\n",
     "        println(s\"$databaseName has exists!\")\n",
     "    }else{\n",
