--- a/integrations/oap/dataproc/notebooks/tpcds_throughput_test_with_gazelle_plugin_Dataproc.ipynb
+++ b/integrations/oap/dataproc/notebooks/tpcds_throughput_test_with_gazelle_plugin_Dataproc.ipynb
@@ -66,6 +66,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3dec26b2-23e9-421b-ba1b-97f61177df30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!export CC=/opt/benchmark-tools/oap/bin/gcc\n",
+    "!export LIBARROW_DIR=/opt/benchmark-tools/oap\n",
+    "!export LD_LIBRARY_PATH=/opt/benchmark-tools/oap/lib/:$LD_LIBRARY_PATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4d562cf4",
    "metadata": {},
    "outputs": [],
@@ -81,7 +93,7 @@
     "val scaleFactor = \"1\"           // data scale 1GB\n",
     "val iterations = 1              // how many times to run the whole set of queries.\n",
     "val format = \"parquet\"          // support parquet or orc\n",
-    "val storage = \"hdfs\"            // support HDFS\n",
+    "val storage = \"hdfs\"            // choose HDFS\n",
     "val bucket_name = \"/user/livy\"  // scala notebook only has the write permission of \"hdfs:///user/livy\" directory    \n",
     "val partitionTables = true      // create partition tables\n",
     "val query_filter = Seq()        // Seq() == all queries\n",
@@ -98,7 +110,6 @@
     "    resultLocation = s\"${storage}://${bucket_name}/results/tpcds_arrow/${scaleFactor}/\"\n",
     "    databaseName = s\"tpcds_arrow_scale_${scaleFactor}_db\"\n",
     "    val tables = Seq(\"call_center\", \"catalog_page\", \"catalog_returns\", \"catalog_sales\", \"customer\", \"customer_address\", \"customer_demographics\", \"date_dim\", \"household_demographics\", \"income_band\", \"inventory\", \"item\", \"promotion\", \"reason\", \"ship_mode\", \"store\", \"store_returns\", \"store_sales\", \"time_dim\", \"warehouse\", \"web_page\", \"web_returns\", \"web_sales\", \"web_site\")\n",
-    "    sql(s\"DROP database if exsits $databaseName CASCADE\")\n",
     "    if (spark.catalog.databaseExists(s\"$databaseName\")) {\n",
     "        println(s\"$databaseName has exists!\")\n",
     "    }else{\n",
